- z-index fix

--- a/analyzer/static/css/style.css
+++ b/analyzer/static/css/style.css
@@ -33,7 +33,7 @@ body {
 	left: 0;
 	background-color: #222;
 	display: block;
-	z-index: 1000;
+	z-index: 1000001;
 }
 
 .container {
